# puzzled

./: '  .gitignore  :w  Cargo.toml
crates/crossword/: Cargo.toml
crates/crossword/src/io/: extras.rs  grids.rs  header.rs  mod.rs  strings.rs
crates/crossword/src/puzzle/: grid.rs  macros.rs  solve.rs
crates/nono-tui/: Cargo.toml  config.toml  out
crates/nono-tui/src/: args.rs  main.rs
crates/nono-tui/src/actions/: engine.rs  mod.rs
crates/nono-tui/src/app/: layout.rs  mod.rs  mode.rs  selection.rs  state.rs
crates/nono-tui/src/widgets/: mod.rs
crates/puzzled/: Cargo.toml
crates/puzzled/src/: lib.rs
crates/puzzled_binario/: Cargo.toml
crates/puzzled_binario/puzzles/ok/: basic.txt  medium.txt
crates/puzzled_binario/src/: lib.rs  main.rs
crates/puzzled_binario/src/io/: image.rs  mod.rs  puz.rs  text.rs
crates/puzzled_binario/src/macros/: binario.rs  bit.rs  mod.rs
crates/puzzled_binario/src/puzzle/: mod.rs
crates/puzzled_binario/src/solve/: mod.rs  solver.rs  state.rs
crates/puzzled_binario_tui/: Cargo.toml
crates/puzzled_binario_tui/src/: action.rs  main.rs
crates/puzzled_binario_tui/src/app/: mod.rs
crates/puzzled_binario_tui/src/commands/: action.rs  mod.rs
crates/puzzled_binario_tui/src/screens/: mod.rs  puzzle.rs
crates/puzzled_core/: Cargo.toml
crates/puzzled_core/src/: cell.rs  lib.rs  macros.rs  metadata.rs  offset.rs  order.rs  position.rs  style.rs  timer.rs  version.rs
crates/puzzled_core/src/grid/: error.rs  index.rs  iter.rs  macros.rs  mod.rs
crates/puzzled_core/src/io/: mod.rs
crates/puzzled_core/src/line/: mod.rs  position.rs
crates/puzzled_core/src/macros/: cell.rs  color.rs  grid.rs  lattice.rs  line.rs  metadata.rs  mod.rs
crates/puzzled_core/src/puzzle/: mod.rs  word.rs
crates/puzzled_core/src/solve/: mod.rs  solver.rs
crates/puzzled_core/src/solver/: mod.rs  solve.rs
crates/puzzled_cross/: Cargo.toml
crates/puzzled_cross/puzzles/ok/: alphabet.txt  mini.puz  out-of-the-frying-pan.puz
crates/puzzled_cross/src/: lib.rs
crates/puzzled_cross/src/io/: checksums.rs  extras.rs  grids.rs  header.rs  mod.rs  strings.rs
crates/puzzled_cross/src/puzzle/: grid.rs  macros.rs  mod.rs  solve.rs
crates/puzzled_crossword/: Cargo.toml
crates/puzzled_crossword/puzzles/ok/: alphabet.puz  alphabet.txt
crates/puzzled_crossword/src/: lib.rs
crates/puzzled_crossword/src/io/: error.rs  extras.rs  grids.rs  mod.rs  puz.rs  text.rs
crates/puzzled_crossword/src/macros/: clue.rs  crossword.rs  mod.rs  square.rs
crates/puzzled_crossword/src/puzzle/: macros.rs  mod.rs  solve.rs  state.rs
crates/puzzled_crossword_tui/: Cargo.toml
crates/puzzled_crossword_tui/src/: main.rs  state.rs
crates/puzzled_crossword_tui/src/commands/: action.rs  mod.rs  motion.rs  text_obj.rs
crates/puzzled_crossword_tui/src/screens/: mod.rs  title.rs
crates/puzzled_io/: Cargo.toml
crates/puzzled_io/src/: error.rs  lib.rs  size.rs  util.rs
crates/puzzled_io/src/chumsky/: mod.rs
crates/puzzled_io/src/format/: error.rs
crates/puzzled_io/src/image/: error.rs  mod.rs
crates/puzzled_io/src/nom/: cell.rs  grid.rs  metadata.rs  mod.rs  square.rs
crates/puzzled_io/src/puz/: checksums.rs  error.rs  extras.rs  grids.rs  header.rs  mod.rs  size.rs  strings.rs
crates/puzzled_io/src/text/: error.rs  mod.rs
crates/puzzled_io/src/util/: dirs.rs
crates/puzzled_nono/: .gitignore  Cargo.toml
crates/puzzled_nono/crates/nono/: Cargo.toml
crates/puzzled_nono/crates/nono-tui/: Cargo.toml  config.toml
crates/puzzled_nono/src/: error.rs  lib.rs
crates/puzzled_nono/src/fill/: mod.rs
crates/puzzled_nono/src/io/: error.rs  img.rs  json.rs  mod.rs  text.rs
crates/puzzled_nono/src/puzzle/: mod.rs
crates/puzzled_nono/src/rules/: slice.rs
crates/puzzled_nono/src/solver/: constraints.rs  mod.rs  validate.rs
crates/puzzled_nono_tui/: Cargo.toml
crates/puzzled_nono_tui/src/: args.rs  error.rs  log.rs  main.rs
crates/puzzled_nono_tui/src/actions/: engine.rs  status.rs  trait.rs
crates/puzzled_nono_tui/src/app/: mod.rs  pos.rs  selection.rs  state.rs
crates/puzzled_nono_tui/src/config/: mod.rs
crates/puzzled_nono_tui/src/events/: mod.rs
crates/puzzled_nono_tui/src/widgets/: layout.rs
crates/puzzled_nonogram/: Cargo.toml
crates/puzzled_nonogram/src/: lib.rs
crates/puzzled_nonogram/src/io/: error.rs  image.rs  img.rs  json.rs  mod.rs  puz.rs  text.rs
crates/puzzled_nonogram/src/macros/: cell.rs  fill.rs  mod.rs  nonogram.rs  rule.rs  run.rs
crates/puzzled_nonogram/src/puzzle/: colors.rs  error.rs  find.rs  macros.rs  mod.rs
crates/puzzled_nonogram/src/solve/: constraints.rs  mod.rs  solver.rs  state.rs  validate.rs
crates/puzzled_nonogram/src/solver/: constraints.rs  mod.rs  validate.rs
crates/puzzled_nonogram_tui/: Cargo.toml
crates/puzzled_nonogram_tui/src/: args.rs  cli.rs  error.rs  log.rs  main.rs
crates/puzzled_nonogram_tui/src/actions/: engine.rs
crates/puzzled_nonogram_tui/src/app/: layout.rs  mod.rs  pos.rs  selection.rs  state.rs
crates/puzzled_nonogram_tui/src/commands/: mod.rs
crates/puzzled_nonogram_tui/src/events/: engine.rs  mod.rs
crates/puzzled_nonogram_tui/src/widgets/: mod.rs
crates/puzzled_puz/: Cargo.toml
crates/puzzled_puz/src/: checksums.rs  error.rs  extras.rs  format.rs  grids.rs  header.rs  lib.rs  size.rs  strings.rs  version.rs
crates/puzzled_puz/src/format/: mod.rs  string.rs
crates/puzzled_puz/src/read/: error.rs  meta.rs  mod.rs  state.rs
crates/puzzled_puz/src/write/: error.rs  mod.rs
crates/puzzled_skyscrapers/: Cargo.toml
crates/puzzled_skyscrapers/src/: lib.rs
crates/puzzled_skyscrapers/src/io/: mod.rs  text.rs
crates/puzzled_skyscrapers/src/macros/: clue.rs  mod.rs  skyscraper.rs  skyscrapers.rs
crates/puzzled_skyscrapers/src/puzzle/: mod.rs  skyscraper.rs
crates/puzzled_skyscrapers/src/solve/: mod.rs  state.rs
crates/puzzled_tui/: Cargo.toml
crates/puzzled_tui/src/: lib.rs  log.rs
crates/puzzled_tui/src/actions/: command.rs  handle.rs  mod.rs
templates/puzzle/: Cargo.toml  cargo-generate.toml
templates/puzzle/src/: lib.rs
(+499 files in other folders)
