[workspace]
members = [
    "crates/puzzled",
    "crates/puzzled_binario",
    "crates/puzzled_binario_tui",
    "crates/puzzled_core",
    "crates/puzzled_crossword", "crates/puzzled_crossword_tui",
    "crates/puzzled_io",
    "crates/puzzled_nonogram",
    "crates/puzzled_nonogram_tui",
    "crates/puzzled_skyscrapers",
    "crates/puzzled_tui",
]
resolver = "2"

[workspace.dependencies]
bitvec = "1.0.1"
concat-idents = "1.1.5"
nom = "8.0.0"
delegate = "0.13.5"
directories = "6.0.0"
image = "0.25.9"
rstest = "0.26.1"
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "0.9.11"
tracing = "0.1.44"
chumsky = "0.12.0"
tracing-test = "0.2.5"

[workspace.dependencies.tokio]
version = "1.50.0"
features = ["sync", "rt", "macros", "rt-multi-thread", "time"]

[workspace.dependencies.bitflags]
version = "2.11.0"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.5.56"
features = ["derive"]

[workspace.dependencies.crossterm]
version = "0.29.0"
features = ["derive-more"]

[workspace.dependencies.derive_more]
version = "2.1.1"
features = [
    "debug",
    "eq",
    "deref",
    "deref_mut",
    "display",
    "index",
    "index_mut",
]

[workspace.dependencies.document-features]
version = "0.2.12"

[workspace.dependencies.miette]
version = "7.6.0"
features = ["fancy"]

[workspace.dependencies.ratatui]
version = "0.30.0"
features = ["unstable-widget-ref", "serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]
