[workspace]
members = [
    "crates/puzzled",
    "crates/puzzled_binario",
    "crates/puzzled_binario_tui",
    "crates/puzzled_core",
    "crates/puzzled_crossword", "crates/puzzled_crossword_tui",
    "crates/puzzled_io",
    "crates/puzzled_nonogram",
    "crates/puzzled_nonogram_tui",
    "crates/puzzled_skyscrapers",
    "crates/puzzled_tui",
]
resolver = "2"

[workspace.dependencies]
bitflags = { version = "2.11.0", features = ["serde"] }
bitvec = "1.0.1"
chumsky = { version = "0.12.0" }
clap = { version = "4.5.56", features = ["derive"] }
concat-idents = "1.1.5"
config = "0.15.22"
crossterm = { version = "0.29.0", features = ["derive-more"] }
delegate = "0.13.5"
derive_more = { version = "2.1.1", features = [ "debug", "eq", "deref", "deref_mut", "display", "index", "index_mut" ] }
directories = "6.0.0"
document-features = { version = "0.2.12" }
image = "0.25.9"
miette = { version = "7.6.0", features = ["fancy"] }
nom = "8.0.0"
ratatui = { version = "0.30.0", features = ["unstable-widget-ref", "serde"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync", "rt", "macros", "rt-multi-thread", "time"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.5"
tui-scrollview = "0.6.2"
