[package]
name = "nono-tui"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["derive-more"] }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
nono = { path = "../nono"}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
directories = "6.0.0"

[dev-dependencies]
rstest = "0.26.1"
tracing-test = "0.2.5"
