[package]
name = "puzzled"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
puzzled_core = {path = "../puzzled_core/"}
puzzled_io = {path = "../puzzled_io/"}
puzzled_crossword = {path = "../puzzled_crossword", optional = true}
puzzled_nonogram = {path = "../puzzled_nonogram", optional = true}
document-features = {workspace = true}

[features]
#! The crate provides a set of optional features that can be enabled in your `Cargo.toml` file.
#!
#! ## Default
#! By default, the following features are enabled
## Enables support for creating puzzles and other structures inline through declarative macros
macros = [
    "puzzled_core/macros",
    "puzzled_crossword?/macros",
    "puzzled_nonogram?/macros",
]
#!
#! ## Puzzles
#! The following features enable 
#! 
## Enables [crosswords](puzzled_crossword)
crossword = ["dep:puzzled_crossword"]
## Enables [nonograms](puzzled_nonogram)
nonogram = ["dep:puzzled_nonogram"]
#! ...and more to follow!

#! ## I/O
#! The following features make reading and writing puzzles easier
## Enables serializing and deserializing puzzles using [`serde`](https://docs.rs/serde/latest/serde/)
serde = [
    "puzzled_core/serde",
    "puzzled_crossword?/serde",
    "puzzled_nonogram?/serde"
]
## Enables reading puzzles from and writing them into the [Across Lite `*.puz` format](https://code.google.com/archive/p/puz/wikis/FileFormat.wiki)
puz = [
    "puzzled_io/puz",
    "puzzled_crossword?/puz",
    "puzzled_nonogram?/puz"
]
