[package]
name = "puzzled_binario"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chumsky = {workspace = true, optional = true}
delegate = {workspace = true}
derive_more = {workspace = true}
document-features = {workspace = true}
image = {workspace = true, optional = true}
nom = {workspace = true, optional = true}
puzzled_core = { path = "../puzzled_core"}
puzzled_io = { path = "../puzzled_io/" }
serde = {workspace = true, optional = true}
thiserror = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
puzzled = {path = "../puzzled", features = ["binario"]}
tracing-test = {workspace = true}
rstest = {workspace = true}

[features]
default = ["macros", "text"]

#! The crate provides a set of optional features that can be enabled in your `Cargo.toml` file.
#!
## Enables support for creating binario puzzles and related types inline through declarative macros
macros = []
## Enables reading and writing binario puzzles from plain text
text = ["dep:chumsky", "puzzled_io/text"]
## Enables serializing and deserializing binario puzzles using [`serde`](https://docs.rs/serde/latest/serde/)
serde = ["dep:serde", "puzzled_core/serde"]

## Enables reading and writing binario puzzles with the [Across Lite `*.puz` format](https://code.google.com/archive/p/puz/wikis/FileFormat.wiki)
puz = ["puzzled_io/puz"]
## Enables reading and writing binario puzzles from images using the [`image`](https://docs.rs/serde/latest/image/) crate
image = ["dep:image", "puzzled_io/image"]
