[package]
name = "puzzled_binario_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
delegate = {workspace = true}
crossterm = {workspace = true}
derive_more = {workspace = true}
ratatui = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tui-scrollview = {workspace = true}

puzzled_tui = {path = "../puzzled_tui/"}
puzzled_binario = {path = "../puzzled_binario/", features = ["text"]}
puzzled_io = {path = "../puzzled_io"}
puzzled_core = {path = "../puzzled_core/", features = ["serde"]}
