[package]
name = "puzzled_core"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = {workspace = true}
serde = {workspace = true, optional = true}
derive_more = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
puzzled = {path = "../puzzled/", features = ["crossword"]}

[features]
default = []
serde = ["dep:serde"]
