[package]
name = "puzzled_io"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = {workspace = true}
puzzled_core = {path = "../puzzled_core/"}
image = {workspace = true, optional = true}

[dev-dependencies]
puzzled = {path = "../puzzled", features = ["puz", "crossword"]}

[features]
default = ["text"]

#! The crate provides a set of optional features that can be enabled in your `Cargo.toml` file.
#!
## Enables reading and writing puzzles from plain text
text = []
## Enables reading and writing puzzles with the [Across Lite `*.puz` format](https://code.google.com/archive/p/puz/wikis/FileFormat.wiki)
puz = []
## Enables reading and writing puzzles from images using the [`image`](https://docs.rs/serde/latest/image/) crate
image = ["dep:image"]
