[package]
name = "puzzled_nono"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = { workspace = true}
derive_more = {workspace = true}
image = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
puzzled_core = { path = "../puzzled_core"}

[dev-dependencies]
rstest = {workspace = true}
tracing-test = {workspace = true}
