[package]
name = "puzzled_nonogram"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitvec = { workspace = true}
derive_more = {workspace = true}
image = {workspace = true}
serde = {workspace = true, optional = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
puzzled_core = { path = "../puzzled_core"}

[dev-dependencies]
rstest = {workspace = true}
tracing-test = {workspace = true}

[features]
default = []
serde = ["dep:serde"]
