[package]
name = "puzzled_nonogram"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitvec = { workspace = true}
derive_more = {workspace = true}
document-features = {workspace = true}
image = {workspace = true, optional = true}
serde = {workspace = true, optional = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
puzzled_core = { path = "../puzzled_core"}
puzzled_io = { path = "../puzzled_io/" }

[dev-dependencies]
puzzled = {path = "../puzzled", features = ["nonogram"]}
rstest = {workspace = true}
tracing-test = {workspace = true}

[features]
default = ["macros", "text"]

#! The crate provides a set of optional features that can be enabled in your `Cargo.toml` file.
#!
## Enables support for creating nonograms and related types inline through declarative macros
macros = []
## Enables reading and writing nonograms from plain text
text = ["puzzled_io/text"]
## Enables serializing and deserializing nonograms using [`serde`](https://docs.rs/serde/latest/serde/)
serde = ["dep:serde", "puzzled_core/serde"]
## Enables reading and writing nonograms with the [Across Lite `*.puz` format](https://code.google.com/archive/p/puz/wikis/FileFormat.wiki)
puz = ["puzzled_io/puz"]
## Enables reading and writing nonograms from images using the [`image`](https://docs.rs/serde/latest/image/) crate
image = ["dep:image", "puzzled_io/image"]
