[package]
name = "puzzled_nonogram_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }

puzzled_nonogram = { path = "../puzzled_nonogram/"}

[dev-dependencies]
rstest = { workspace = true }
tracing-test = { workspace = true }
