[package]
name = "puzzled_nonogram_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
delegate = {workspace = true}
derive_more = {workspace = true}
ratatui = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

puzzled_nonogram = { path = "../puzzled_nonogram/", features = ["serde"]}
puzzled_io = { path = "../puzzled_io/" }
puzzled_core = { path = "../puzzled_core/", features = ["serde"] }
puzzled_tui = { path = "../puzzled_tui/" }

[dev-dependencies]
rstest = { workspace = true }
tracing-test = { workspace = true }
