[package]
name = "puzzled_skyscrapers"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true, optional = true }
document-features = {workspace = true}
derive_more = {workspace = true}
thiserror = { workspace = true}
puzzled_core = { path = "../puzzled_core"}
puzzled_io = { path = "../puzzled_io"}

[dev-dependencies]
rstest = { workspace = true }
puzzled_core = { path = "../puzzled_core/", features = ["macros"] }

[features]
default = ["macros", "text"]

#! The crate provides a set of optional features that can be enabled in your `Cargo.toml` file.
#!
## Enables support for creating skyscrapers and related types inline through declarative macros
macros = ["puzzled_core/macros"]
## Enables reading and writing skyscrapers from plain text
text = ["puzzled_io/text"]
## Enables serializing and deserializing skyscrapers using [`serde`](https://docs.rs/serde/latest/serde/)
serde = ["dep:serde", "puzzled_core/serde"]
## Enables reading and writing skyscrapers with the [Across Lite `*.puz` format](https://code.google.com/archive/p/puz/wikis/FileFormat.wiki)
puz = ["puzzled_io/puz"]
