[package]
name = "puzzled_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
config = {workspace = true}
concat-idents = {workspace = true}
crossterm = {workspace = true}
derive_more = {workspace = true}
ratatui = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tui-scrollview = {workspace = true}
toml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

puzzled_core = {path = "../puzzled_core/"}
puzzled_io = {path = "../puzzled_io/"}
