[package]
name = "puzzled_{{ puzzle }}"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
derive_more = {workspace = true}
document-features = {workspace = true}

{%- if support_serde %}
serde = {workspace = true, optional = true}
{% endif -%}

{%- if support_images %}
image = {workspace = true, optional = true}
{% endif -%}

thiserror = {workspace = true}
puzzled_core = { path = "../puzzled_core"}
puzzled_io = { path = "../puzzled_io/" }

[dev-dependencies]
puzzled = {path = "../puzzled", features = ["{{ puzzle | pascal_case}}"]}
rstest = {workspace = true}

[features]
default = ["macros", "text"]

#! The crate provides a set of optional features that can be enabled in your `Cargo.toml` file.
#!
## Enables support for creating {{puzzles}} and related types inline through declarative macros
macros = []
## Enables reading and writing {{puzzles}} from plain text
text = ["puzzled_io/text"]

{%- if support_serde %}
## Enables serializing and deserializing {{puzzles}} using [`serde`](https://docs.rs/serde/latest/serde/)
serde = ["dep:serde", "puzzled_core/serde"]
{% endif -%}

{%- if support_puz %}
## Enables reading and writing {{puzzles}} with the [Across Lite `*.puz` format](https://code.google.com/archive/p/puz/wikis/FileFormat.wiki)
puz = ["puzzled_io/puz"]
{% endif -%}

{% if support_images -%}
## Enables reading and writing {{puzzles}} from images using the [`image`](https://docs.rs/serde/latest/image/) crate
image = ["puzzled_io/image"]
{% endif -%}
