[package]
name = "nono"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
derive_more = { version = "2.1.1", features = ["debug"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
rstest = "0.26.1"
tracing-test = "0.2.5"
